<resources>
    <string name="app_name">Homework4</string>
    <string name="button_addDream">Log A Dream</string>
    <string name="spinner_title">How did you feel?</string>
    <string name="button_save">Save</string>
    <string-array name="emotion_choices"><item></item>
                                         <item>fear</item>
                                         <item>panic</item>
                                         <item>loss of self</item>
                                         <item>grief</item>
                                         <item>freedom</item>
                                         <item>love</item>
                                         <item>joy</item>
                                         <item>vulnerability</item>
                                         <item>confused</item>
                                         <item>sad</item>
    </string-array>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="dEmotion">How did you feel?</string>
    <string name="dHappened">What happened?</string>
    <string name="dInterpretation">What\'s your interpretation?</string>
</resources>