<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_dTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:text="TextView"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_dDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_dUpdate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_dUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_dDelete" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_dUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_dTitle">

        <TextView
            android:id="@+id/textView_dEmotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dEmotion"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textView_dEmotion_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textView_dHappened"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dHappened"
            android:textSize="24sp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/textView_dHappened_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView_dInterpretation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dInterpretation"
            android:textSize="24sp"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/textView_dInterpretation_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>